--- a/前端工程化.md
+++ b/前端工程化.md
@@ -324,4 +324,36 @@
     }
     ```
 
+    **webpack尽量使用render来渲染**
+
+    ## webpack打包上线
+
+    ##### 上线之前需要通过webpack将要上线的应用进行整体打包上线，通过配置package.json
+
+    ```json
+    {
+      "name": "webpack",
+      "version": "1.0.0",
+      "description": "",
+      "private": true,
+      "main": "index.js",
+      "dependencies": {},
+      "devDependencies": {
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.0"
+      },
+      "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack-dev-server --open --host 127.0.0.1 --port 9999",
+        //添加用于打包的命令 -p就是production
+        "build":"webpack -p"
+      },
+      "keywords": [],
+      "author": "",
+      "license": "ISC"
+    }
+    
+    ```
+
     
